@@ -2122,6 +2122,13 @@ void BX_CPU_C::VMexit(bxInstruction_c *i, Bit32u reason, Bit64u qualification)
   BX_CPU_THIS_PTR errorno = 0;
   BX_CPU_THIS_PTR EXT = 0;
 
+#if BX_DEBUGGER
+  if (BX_CPU_THIS_PTR vmexit_break) {
+    BX_CPU_THIS_PTR stop_reason = STOP_VMEXIT_BREAK_POINT;
+    bx_debug_break(); // trap into debugger
+  }
+#endif
+
   longjmp(BX_CPU_THIS_PTR jmp_buf_env, 1); // go back to main decode loop
 }
 
